# MemSnap

./: .gitignore  CMakeLists.txt  MemSnap.doc.info  MemSnap.info  README.md  fonts.info  source.info
fonts/tracers/: 6
fonts/tracers_bold/: 6
source/: icon.c  icon.h  makefile  memsnap.c  menu.c  menu.h  version.h.in  wintext.c  wintext.h
